--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <script src="bower_components/platform/platform.js"></script>
-    <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">
-    <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="bower_components/chartbook-scaffold/chartbook-scaffold.html">
+    <link rel="import" href="bower_components/chartbook-toolbar/chartbook-toolbar.html">
     <link rel="import" href="bower_components/core-menu/core-menu.html">
     <link rel="import" href="bower_components/core-menu/core-submenu.html">
     <link rel="import" href="bower_components/core-icon-button/core-icon-button.html">
@@ -20,12 +20,12 @@
       <flatiron-director route="{{route}}" autohash></flatiron-director>
       <core-a11y-keys target="{{parentElement}}" keys="up down left right space space+shift" on-keys-pressed="{{keyHandler}}"></core-a11y-keys>
 
-      <core-scaffold id="scaffold">
+      <chartbook-scaffold id="scaffold">
 
         <nav>
-          <core-toolbar>
+          <chartbook-toolbar>
             <span>Business In America</span>
-          </core-toolbar>
+          </chartbook-toolbar>
 
           <core-menu valueattr="url" selected="{{route}}" on-core-select="{{menuItemSelected}}">
 
@@ -38,11 +38,11 @@
           </core-menu>
         </nav>
 
-        <core-toolbar tool flex>
+        <chartbook-toolbar tool flex>
           <div flex></div>
           <core-icon-button icon="chevron-left" on-click="{{goToPrevious}}"></core-icon-button>
           <core-icon-button icon="chevron-right" on-click="{{goToNext}}"></core-icon-button>
-        </core-toolbar>
+        </chartbook-toolbar>
 
         <div layout horizontal center-center fit>
           <core-animated-pages id="pages" valueattr="url" selected="{{route}}" transitions="slide-from-right">
@@ -61,7 +61,7 @@
           </core-animated-pages>
         </div>
 
-      </core-scaffold>
+      </chartbook-scaffold>
     </template>
 
     <script src="bower_components/hammerjs/hammer.js"></script>
